Code quality improvements. Fixed that normalizing notes in multi-stage were guarded by defect condition.